--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
                             College-CEC Visakhapatnam,in the brach of CSE with 60% (up to 3rd year)</li>
                     </ul>
                </div>
+                 <div class="tab-contents active-tab" id="certificates">
+                    <ul>
+                        <li><span>1 Month Virtual internship in Web Development </span><br>
+                        <img src="certificate.png" alt="cdertificate" class="certi"></li>
+                    </ul>
+               </div>
+                
             </div>
 
         </section>
