--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                        <div class=" tab-titles">
                         <p class="tab-link active-link" onclick="openTab('skills')">Skills</p>
                         <p class="tab-link" onclick="openTab('Education')">Education</p>
+                        <p class="tab-link" onclick="openTab('certificates')">Certificate</p>
                        </div>
                        <div class="tab-contents active-tab" id="skills">
                             <ul>
@@ -77,7 +78,7 @@
                             College-CEC Visakhapatnam,in the brach of CSE with 60% (up to 3rd year)</li>
                     </ul>
                </div>
-                 <div class="tab-contents active-tab" id="certificates">
+                 <div class="tab-contents" id="certificates">
                     <ul>
                         <li><span>1 Month Virtual internship in Web Development </span><br>
                         <img src="certificate.png" alt="cdertificate" class="certi"></li>
