--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="home-cont">
                 <h3>Hello, It's Me</h3>
-                <h1>Yashwanth</h1>
+                <h1>Yash</h1>
                 
                 <h3>And Currently I'm a <span>
                     Studying final year b-tech at Chaitanya Engineering College Vizag...
